MANIFESTS/04-db.yml
# Headless service running the Postgres Database
#
# Headless means each pod is accessed by a stable hostname, 
# instead of an IP indicated by clusterIP:None.
# This is prefered for stateful applications like databases. 
# Requests go to same instance, even though IP might change
apiVersion: v1
kind: Service
metadata:
  name: dbservice 
  labels:
    app: postgresdb-service
spec:
  selector:
    app: postgres
  ports:
    - port: 5432 
  clusterIP: None
---
# Statefulset managing the deployment and scaling of a set of Pods 
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-stateful
spec:
  serviceName: dbservice # Connects to the Headless service
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: # Image build from dockerfile
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-pvc
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              memory: "2Gi"
              cpu: "500m"
            limits:
              memory: "5Gi"
              cpu: "1"
  # Indicates how the persistent value claim is mounted
  volumeClaimTemplates:
    - metadata:
        name: postgres-pvc
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ssd
        resources:
          requests:
            storage: 5Gi
