MANIFESTS/06-api.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: api
  namespace: default
  labels:
    app: FastAPI
    name: api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: FastAPI
      task: api
  template:
    metadata:
      labels:
        app: FastAPI
        task: api
    spec:
      volumes:
        - name: media-data
          persistentVolumeClaim:
            claimName: media-vol
      containers:
        - name: api
          image: # Image build from dockerfile
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
              ephemeral-storage: "2Gi"
            requests:
              cpu: "500m"
              memory: "400Mi"
          ports:
            - name: incoming
              containerPort: 8000
          volumeMounts:
            - mountPath: /var/www/api
              name: media-data

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: default
spec:
  ports:
    - name: api-access
      port: 8000
  selector:
    app: FastAPI
    task: api
