MANIFESTS/03-ingressroutes.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirectregex
spec:
  redirectRegex:
    regex: ^https://www\.(.*)
    replacement: https://${1}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guiingress
  namespace: default

spec:
  entryPoints:
    - websecure
    - web

  routes:
  - match: Host(`devg4.duckdns.org`)
    kind: Rule
    services:
    - name: gui
      passHostHeader: true
      port: 8000
    middlewares:
        - name: redirectregex
  tls:
    certResolver: myresolver
    domains:
    - main: devg4.duckdns.org
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apiingress
  namespace: default

spec:
  entryPoints:
    - websecure
    - web

  routes:
  - match: Host(`apidevg4.duckdns.org`)
    kind: Rule
    services:
    - name: api
      passHostHeader: true
      port: 8000
    middlewares:
        - name: redirectregex
  tls:
    certResolver: myresolver
    domains:
    - main: apidevg4.duckdns.org
